--- a/style.css
+++ b/style.css
@@ -19,3 +19,43 @@
     padding: 20px;
     border-radius: 10px;
 }
+
+.calculator form input{
+    border: 0;
+    outline: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 10px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),5px 5px 15px rgba(0, 0, 0, 0.2);
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    margin: 10px;
+}
+
+form .display{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+form .display input{
+    text-align: center;
+    flex: 1;
+    font-size: 45px;
+    box-shadow: none;
+    height: 70px;
+    background: rgb(176, 175, 175);
+}
+
+.pink-btn {
+    background: rgba(255, 231, 235, 0.566);
+}
+
+.vivid-btn{
+    background: rgb(251, 166, 180);
+}
+
+form input.equal{
+    width: 145px;
+}
